--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,87 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap");
+@import "@ctrl/ngx-emoji-mart/picker";
+@import "ngx-toastr/toastr";
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Hanken Grotesk", sans-serif;
+}
+
+main.main {
+  background-color: whitesmoke;
+  height: calc(100vh - 77px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+}
+
+h4.title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-size: 25px;
+  color: #01204e;
+}
+.row {
+  width: 90%;
+  margin: 10px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  height: 60px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.041);
+  align-items: center;
+  justify-content: flex-start;
+  display: flex;
+  font-size: 17px;
+  color: rgb(37, 37, 37);
+  img {
+    margin-left: 25px;
+    margin-right: 35px;
+  }
+}
+
+.back {
+  align-self: flex-start;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.save {
+  width: 81%;
+  height: 60px;
+  background-color: #01204e;
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.041);
+  font-size: 17px;
+  color: white;
+  position: absolute;
+  bottom: 90px;
+  font-size: 18px;
+}
+
+.text {
+  color: #01204e;
+}
+
+.subtitle {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #01204e;
+  margin-left: 40px;
+  align-self: flex-start;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
