add boiler platecode

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -73,7 +73,7 @@
   } @if(!categories.length && showmodal && !reminders.length){
 
   <div class="create-goal-card">
-    <img class="rocket" src="../../assets/3dstar.png" alt="" />
+    <img class="rocket" src="../../public/3dstar.png" alt="" />
     <button (click)="onCreateGoalClick()">Let's create some goals</button>
   </div>
   } @if (showLoader) {
