fix public issue

--- a/src/app/components/settings/general-settings/general-settings.component.html
+++ b/src/app/components/settings/general-settings/general-settings.component.html
@@ -1,31 +1,31 @@
 <main class="main">
   <h4 class="title">Settings</h4>
   <div (click)="addToDoCategory()" class="row">
-    <img src="list.svg" alt="" />
+    <img src="public/list.svg" alt="" />
 
     <span class="text">Categories</span>
   </div>
 
   <div (click)="onAddToDoClick()" class="row">
-    <img src="todo-setting.png" alt="" />
+    <img src="public/todo-setting.png" alt="" />
     <span class="text">Add a reminder</span>
   </div>
   <div (click)="onCertificatesClick()" class="row">
-    <img src="certificate.png" alt="" />
+    <img src="public/certificate.png" alt="" />
     <span class="text">My Certificates</span>
   </div>
   <div (click)="onResetClick()" class="row">
-    <img src="reset.svg" alt="" />
+    <img src="public/reset.svg" alt="" />
     <span class="text">Reset App</span>
   </div>
 
   <div class="row">
-    <img src="star-setting.png" alt="" />
+    <img src="public/star-setting.png" alt="" />
     <span class="text">Rate us</span>
   </div>
 
   <div (click)="onLogOut()" class="row">
-    <img src="logout.png" alt="" />
+    <img src="public/logout.png" alt="" />
     <span class="text">Log Out</span>
   </div>
 </main>
