img path resolve

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,11 +6,7 @@
   <div class="home-card reminder-card">
     <div (click)="onReminderClick()" class="category-box">
       <span class="category-name">🗓️ Reminders</span>
-      <app-rating
-        class="rating"
-        [rating]="doneRemindersArray.length"
-        [totalStars]="reminders.length"
-      ></app-rating>
+      <app-rating class="rating" [rating]="doneRemindersArray.length" [totalStars]="reminders.length"></app-rating>
       <img class="result" [src]="reminderCompleteImgPath" alt="" />
     </div>
 
@@ -20,11 +16,7 @@
       <div class="task">
         <div class="task-container">
           <label class="container">
-            <input
-              (click)="onReminderCheckBoxCick(reminder)"
-              [checked]="reminder.done"
-              type="checkbox"
-            />
+            <input (click)="onReminderCheckBoxCick(reminder)" [checked]="reminder.done" type="checkbox" />
             <div class="checkmark"></div>
           </label>
 
@@ -39,11 +31,7 @@
   <div class="home-card">
     <div (click)="onCategoryClick(category)" class="category-box">
       <span class="category-name">{{ category.icon }} {{ category.name }}</span>
-      <app-rating
-        class="rating"
-        [rating]="category.tasksDone"
-        [totalStars]="category.tasks.length"
-      ></app-rating>
+      <app-rating class="rating" [rating]="category.tasksDone" [totalStars]="category.tasks.length"></app-rating>
       <img class="result" [src]="category.completeImgPath" alt="" />
     </div>
 
@@ -54,11 +42,7 @@
       <div class="task">
         <div class="task-container">
           <label class="container">
-            <input
-              (click)="onCheckBoxClick($event, category, task)"
-              [checked]="task.done"
-              type="checkbox"
-            />
+            <input (click)="onCheckBoxClick($event, category, task)" [checked]="task.done" type="checkbox" />
             <div class="checkmark"></div>
           </label>
 
@@ -73,7 +57,7 @@
   } @if(!categories.length && showmodal && !reminders.length){
 
   <div class="create-goal-card">
-    <img class="rocket" src="3dstar.png" alt="" />
+    <img class="rocket" src="public/3dstar.png" alt="" />
     <button (click)="onCreateGoalClick()">Let's create some goals</button>
   </div>
   } @if (showLoader) {
