--- a/src/app/components/shared/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/components/shared/confirmation-modal/confirmation-modal.component.html
@@ -1,5 +1,5 @@
 <main>
-  <img src="../../assets/attention.png" alt="" />
+  <img src="public/attention.png" alt="" />
 
   <span>Are you sure you want to reset the app ?</span>
 
