--- a/src/app/components/settings/categories/categories.component.html
+++ b/src/app/components/settings/categories/categories.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <img (click)="onBackClick()" class="back" src="back.svg" alt="" />
+  <img (click)="onBackClick()" class="back" src="public/back.svg" alt="" />
 
   <h4 class="title cate-title">Categories</h4>
 
@@ -8,14 +8,14 @@
     <div (click)="onEditClick(category)" class="home-card example-box" cdkDrag>
       <span class="category-name">{{ category.icon }} {{ category.name }}</span>
 
-      <img (click)="onDeleteClick($event, category)" src="delete.svg" alt="" />
+      <img (click)="onDeleteClick($event, category)" src="public/delete.svg" alt="" />
     </div>
     }
   </div>
 
   <div (click)="onAddToDoClick()" class="home-card">
     <div class="category-name add-box">
-      <img class="" src="add.svg" alt="" />
+      <img class="" src="public/add.svg" alt="" />
       <span class=""> Add new category</span>
     </div>
   </div>
